# portview

./: Cargo.toml  LICENSE  README.md  flake.nix  install.ps1  install.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
Formula/: portview.rb
src/: docker.rs  linux.rs  macos.rs  main.rs  tui.rs  windows.rs
