[package]
name = "portview"
version = "0.2.0"
edition = "2021"
description = "A diagnostic-first port viewer. See what's on your ports, then act on it."
license = "MIT"
repository = "https://github.com/mapika/portview"
keywords = ["port", "process", "diagnostic", "network", "cli"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
tabled = "0.17"
colored = "2"
libc = "0.2"

[profile.release]
opt-level = "z"
lto = true
strip = true
