[package]
name = "portview"
version = "0.6.0"
edition = "2021"
description = "A diagnostic-first port viewer. See what's on your ports, then act on it."
license = "MIT"
repository = "https://github.com/mapika/portview"
keywords = ["port", "process", "diagnostic", "network", "cli"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
tabled = { version = "0.20", features = ["ansi"] }
colored = "2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Console",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Security",
    "Win32_System_SystemInformation",
] }

[profile.release]
opt-level = "z"
lto = true
strip = true
