[package]
name = "portview"
version = "1.0.1"
edition = "2021"
description = "A diagnostic-first port viewer. See what's on your ports, then act on it."
license = "MIT"
repository = "https://github.com/mapika/portview"
keywords = ["port", "process", "diagnostic", "network", "cli"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Console",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Security",
    "Win32_System_SystemInformation",
] }

[profile.release]
opt-level = "z"
lto = true
strip = true
